0.09008 TO BE RELEASED
    - Make sure object can('checked') before calling checked() (colinnewell)

0.09007 2012-01-13
    - bump MooseX::Attribute::Chained version

0.09006 2012-01-23
    - fixed deprecation warnings of MX::Attribute::Chained (bricas)
    - Added placeholder attributes for types Text and Textarea with L10N support.
    - Added L10N support for 'prefix' attributes for types Date and DateTime.
    - Added 'attributes' support to types Date and DateTime.

0.09005 2011-09-06
    - bump version of prereq CGI to 3.37 to make all tests pass

0.09004 2011-08-26

    - skip aggregate.t on Win32
    - no functional changes to HTML::FormFu

0.09003_02 2011-08-25

    - disable Test::Aggregate on Win32

0.09003_01 2011-05-11

    - using Test::Aggregate for the test suite if installed
      tests finish now in seconds instead of minutes

0.09003 2011-05-10

    - fixed regression in Model::HashRef introduced in 0.09000

0.09002 2011-03-21

    - Hopefully fix IO::Interactive dependency properly

0.09001 2011-03-31

    - Fix IO::Interactive dependency

0.09000 2011-03-29

    - Codebase changed to use Moose - massive internal changes - any custom
      Elements, Constraints, etc will require changes.
      See advice on mailing list:
      http://www.mail-archive.com/html-formfu@lists.scsys.co.uk/msg02325.html
      Or ask for help on the mailing list:
      http://lists.scsys.co.uk/cgi-bin/mailman/listinfo/html-formfu
    
    - Bug fix: was a fatal error when a value was submitted for Label element
      (code called delete_nested_hash_value instead of deleted_nested_hash_key).
    
    - Bug fix: RT#65728 Filter::Split shouldn't return a value if no value was
      submitted.
    
    - Bug fix: Element::Date now uses default() in preference to
      default_natural(). RT#65727
    
    - DateTime elements, minutes and seconds have new 'interval' option.
    
    - Now only delete submitted value if there's no other field on the form with